fix(ci):mv jar file

--- a/.github/workflows/zknet-service-ci.yml
+++ b/.github/workflows/zknet-service-ci.yml
@@ -38,6 +38,8 @@ jobs:
           source: "./gateway/target/zknet-gateway-dev.jar"
           target: "/application/zknet/gateway"
           strip_components: 2
+          script: |
+            mv /application/zknet/gateway/target/zknet-gateway-dev.jar /application/zknet/gateway/
       - name: start gateway
         uses: cross-the-world/ssh-pipeline@master
         env:
@@ -49,6 +51,7 @@ jobs:
           port: 22
           connect_timeout: 20s
           script: |
+            cd /application/zknet/
             docker-compose restart zknet_gateway
 #            cd /root/zknet-service/gateway/target/
 #            i=`ps -ef|grep "zknet-gateway-dev"|grep java|grep -v grep|awk '{print $2}'`
